--- a/FDS_26_aug.ipynb
+++ b/FDS_26_aug.ipynb
@@ -6,7 +6,7 @@
       "name": "FDS  26 aug.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNIQeEXUEysPQioCH7C3Tum",
+      "authorship_tag": "ABX9TyPJFcNsxvc2XHZpe6W+L6K6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1065,6 +1065,16 @@
           "execution_count": 20
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 8/9/22  pract\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Vq68q7uDzhZE"
+      }
     },
     {
       "cell_type": "code",
@@ -2264,12 +2274,12 @@
         "state.transform(func = lambda x : x * 10)"
       ],
       "metadata": {
-        "id": "sa7Z2jsilQ1e",
-        "outputId": "ce9c6fef-8854-4e78-8500-210df968bca9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "sa7Z2jsilQ1e",
+        "outputId": "ce9c6fef-8854-4e78-8500-210df968bca9"
       },
       "execution_count": 30,
       "outputs": [
@@ -2904,12 +2914,12 @@
         "state.head()"
       ],
       "metadata": {
-        "id": "3WNQmrZnvUIq",
-        "outputId": "0b2dd954-473a-4f1e-9480-f17d20ba6491",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "3WNQmrZnvUIq",
+        "outputId": "0b2dd954-473a-4f1e-9480-f17d20ba6491"
       },
       "execution_count": 32,
       "outputs": [
@@ -3088,11 +3098,11 @@
         "print(mean_purchase)"
       ],
       "metadata": {
-        "id": "oSAjHd1svgjd",
-        "outputId": "781eb1bb-6f8d-49b7-f3a0-b773723420f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oSAjHd1svgjd",
+        "outputId": "781eb1bb-6f8d-49b7-f3a0-b773723420f9"
       },
       "execution_count": 34,
       "outputs": [
@@ -3162,12 +3172,12 @@
         "mer"
       ],
       "metadata": {
-        "id": "DjvRHO8pwZnn",
-        "outputId": "9fedf032-bbb8-428b-aa01-13a8b59c4b08",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "DjvRHO8pwZnn",
+        "outputId": "9fedf032-bbb8-428b-aa01-13a8b59c4b08"
       },
       "execution_count": 35,
       "outputs": [
@@ -3800,11 +3810,11 @@
         "print(state.isnull().sum())"
       ],
       "metadata": {
-        "id": "gfpYuJ91wh31",
-        "outputId": "fb8fc8eb-63b6-450c-d48b-fc44404e05c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gfpYuJ91wh31",
+        "outputId": "fb8fc8eb-63b6-450c-d48b-fc44404e05c3"
       },
       "execution_count": 36,
       "outputs": [
@@ -3834,12 +3844,12 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "RPbZlLOMuPIb",
-        "outputId": "941cf041-a4e2-4ef9-88d9-02bae97aa64c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "RPbZlLOMuPIb",
+        "outputId": "941cf041-a4e2-4ef9-88d9-02bae97aa64c"
       },
       "execution_count": 40,
       "outputs": [
@@ -4016,11 +4026,11 @@
         "df.iloc[4,2]"
       ],
       "metadata": {
-        "id": "YTeHIvrWw2_S",
-        "outputId": "653747ef-a48c-4afb-cce8-afadaa674013",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YTeHIvrWw2_S",
+        "outputId": "653747ef-a48c-4afb-cce8-afadaa674013"
       },
       "execution_count": 41,
       "outputs": [
@@ -4047,12 +4057,12 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "DwrNNXIXxCaE",
-        "outputId": "9a603601-dfc1-45e1-ebc7-ea45b7fca8d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "DwrNNXIXxCaE",
+        "outputId": "9a603601-dfc1-45e1-ebc7-ea45b7fca8d4"
       },
       "execution_count": 43,
       "outputs": [
@@ -4241,12 +4251,12 @@
         "df.loc[:,df.all()]"
       ],
       "metadata": {
-        "id": "eiFcfSWZxjkU",
-        "outputId": "d310e034-fb8a-4a59-ba7a-c8ac65313d0d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "eiFcfSWZxjkU",
+        "outputId": "d310e034-fb8a-4a59-ba7a-c8ac65313d0d"
       },
       "execution_count": 45,
       "outputs": [
@@ -4411,12 +4421,12 @@
         "df.loc[:,df.isnull().any()]"
       ],
       "metadata": {
-        "id": "vERbUCmdyAxW",
-        "outputId": "b0309523-8c63-44fd-e067-fd1fd0a326d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "vERbUCmdyAxW",
+        "outputId": "b0309523-8c63-44fd-e067-fd1fd0a326d4"
       },
       "execution_count": 46,
       "outputs": [
